tests/baselines/reference/classExtendsNull.errors.txt
tests/cases/compiler/classExtendsNull.ts(2,5): error TS17005: A constructor cannot contain 'super' call when a class extends 'null'


==== tests/cases/compiler/classExtendsNull.ts (1 errors) ====
    class C extends null {
        constructor() {
        ~~~~~~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
            return Object.create(null);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS17005: A constructor cannot contain 'super' call when a class extends 'null'
    }
    
    class D extends null {
        constructor() {
            return Object.create(null);
        }
    }